# u-nesting

./: .gitignore  nest_aligner.py  nesting_playground.ipynb  obs_inspector.ipynb  requirements.txt  setup.sh
.github/workflows/: ci.yml  nuget-release.yml
bindings/csharp/UNesting/: UNesting.csproj
crates/core/: Cargo.toml
crates/core/src/: alns.rs  brkga.rs  ga.rs  gdrr.rs  lib.rs  sa.rs  timing.rs
crates/cutting/src/: path.rs
crates/d2/src/: board.rs  ga_nesting.rs  lib.rs  nester.rs  nfp.rs
crates/d3/src/: ga_packing.rs  packer.rs
crates/python/: Cargo.toml
crates/python/python/u_nesting/: __init__.py
crates/python/src/: lib.rs
data/: aligner_library.json  aligner_svgs.json
scripts/: extract_svg_library.py  pointer_net.py  train_pair_pointer_net.py  train_value_net.py  u_nesting_gym.py
