[package]
name = "u-nesting-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Core traits and abstractions for U-Nesting spatial optimization engine"
keywords = ["nesting", "bin-packing", "optimization", "geometry"]
categories = ["algorithms", "mathematics"]

[dependencies]
serde = { workspace = true, optional = true }
thiserror.workspace = true
rayon = { workspace = true, optional = true }
rand.workspace = true
log.workspace = true
u-metaheur = { version = "0.2", path = "../../vendor/u-metaheur" }
u-numflow = { version = "0.2", path = "../../vendor/u-numflow" }
u-geometry = { version = "0.1", path = "../../vendor/u-geometry" }

[dev-dependencies]
proptest.workspace = true
approx.workspace = true

[features]
default = []
serde = ["dep:serde", "u-geometry/serde"]
parallel = ["dep:rayon"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
# Activate js feature for getrandom 0.2 used by transitive deps (e.g. i_overlay ecosystem)
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
